@@ -16,7 +16,7 @@
  * this program; if not, write to the Free Software Foundation, Inc., 59 Temple
  * Place - Suite 330, Boston, MA 02111-1307, USA.
  */
-/* $Id: Tools.java,v 1.17.18.5 2005-04-15 22:28:09 christianfoltin Exp $ */
+/* $Id: Tools.java,v 1.17.18.6 2006-01-12 23:10:12 christianfoltin Exp $ */
 
 package freemind.main;
 
@@ -30,6 +30,8 @@ import java.io.File;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URL;
+import java.security.spec.AlgorithmParameterSpec;
+import java.security.spec.KeySpec;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.HashSet;
@@ -42,6 +44,13 @@ import java.util.Vector;
 import java.util.zip.DataFormatException;
 import java.util.zip.Deflater;
 import java.util.zip.Inflater;
+
+import javax.crypto.Cipher;
+import javax.crypto.IllegalBlockSizeException;
+import javax.crypto.SecretKey;
+import javax.crypto.SecretKeyFactory;
+import javax.crypto.spec.PBEKeySpec;
+import javax.crypto.spec.PBEParameterSpec;
 
 public class Tools {
 
@@ -109,12 +118,10 @@ public class Tools {
     public static Point xmlToPoint(String string) {
         if (string == null)
             return null;
-        System.out.println("old String: '" + string + "'");
         // fc, 3.11.2004: bug fix for alpha release of FM
         if (string.startsWith("java.awt.Point")) {
             string = string.replaceAll(
                     "java\\.awt\\.Point\\[x=([0-9]*),y=([0-9]*)\\]", "$1;$2");
-            System.out.println("new String: " + string);
         }
         List l = stringToList(string);
         ListIterator it = l.listIterator(0);
@@ -238,7 +245,6 @@ public class Tools {
     public static String toXMLEscapedTextWithNBSPizedSpaces(String text) {
         int len = text.length();
         StringBuffer result = new StringBuffer(len);
-        int intValue;
         char myChar;
         boolean previousSpace = false;
         boolean spaceOccured = false;
@@ -304,7 +310,6 @@ public class Tools {
      */
     public static String urlGetFile(URL url) {
         String osNameStart = System.getProperty("os.name").substring(0, 3);
-        String fileSeparator = System.getProperty("file.separator");
         if (osNameStart.equals("Win") && url.getProtocol().equals("file")) {
             String fileName = url.toString().replaceFirst("^file:", "")
                     .replace('/', '\\');
@@ -557,12 +562,124 @@ public class Tools {
         }
     }
 
-    /**
+    /** from: http://javaalmanac.com/egs/javax.crypto/PassKey.html */
+	public static class TripleDesEncrypter {
+	    private static final String SALT_PRESENT_INDICATOR = " ";
+	    private static final int SALT_LENGTH=8;
+	    
+	    Cipher ecipher;
+	
+	    Cipher dcipher;
+	
+	    // 8-byte default Salt
+	    byte[] salt = { (byte) 0xA9, (byte) 0x9B, (byte) 0xC8, (byte) 0x32,
+	            (byte) 0x56, (byte) 0x35, (byte) 0xE3, (byte) 0x03 };
+	
+	    // Iteration count
+	    int iterationCount = 19;
+	
+		private final char[] passPhrase;
+	
+	    public TripleDesEncrypter(StringBuffer pPassPhrase) {
+	    		passPhrase = new char[pPassPhrase.length()];
+	    		pPassPhrase.getChars(0, passPhrase.length, passPhrase, 0);
+	    }
+	
+	    /**
+		 * @param mSalt
+		 */
+		private void init(byte[] mSalt) {
+	        if(mSalt!=null) {
+	        		this.salt = mSalt;
+	        }
+			if (ecipher==null) {
+				try {
+					// Create the key
+					KeySpec keySpec = new PBEKeySpec(passPhrase,
+							salt, iterationCount);
+					SecretKey key = SecretKeyFactory.getInstance(
+							"PBEWithMD5AndTripleDES").generateSecret(keySpec);
+					ecipher = Cipher.getInstance(key.getAlgorithm());
+					dcipher = Cipher.getInstance(key.getAlgorithm());
+	
+					// Prepare the parameter to the ciphers
+					AlgorithmParameterSpec paramSpec = new PBEParameterSpec(
+							salt, iterationCount);
+	
+					// Create the ciphers
+					ecipher.init(Cipher.ENCRYPT_MODE, key, paramSpec);
+					dcipher.init(Cipher.DECRYPT_MODE, key, paramSpec);
+				} catch (java.security.InvalidAlgorithmParameterException e) {
+				} catch (java.security.spec.InvalidKeySpecException e) {
+				} catch (javax.crypto.NoSuchPaddingException e) {
+				} catch (java.security.NoSuchAlgorithmException e) {
+				} catch (java.security.InvalidKeyException e) {
+				}
+			}
+		}
+	
+		public String encrypt(String str) {
+	        try {
+	            // Encode the string into bytes using utf-8
+	            byte[] utf8 = str.getBytes("UTF8");
+	            // determine salt by random:
+	            byte[] newSalt = new byte[SALT_LENGTH];
+	            for (int i = 0; i < newSalt.length; i++) {
+	                newSalt[i] = (byte)(Math.random()*256l-128l);
+	            }
+	
+				init(newSalt);
+	            // Encrypt
+	            byte[] enc = ecipher.doFinal(utf8);
+	
+	            // Encode bytes to base64 to get a string
+	            return Tools.toBase64(newSalt)
+	                    + SALT_PRESENT_INDICATOR
+	                    + Tools.toBase64(enc);
+	        } catch (javax.crypto.BadPaddingException e) {
+	        } catch (IllegalBlockSizeException e) {
+	        } catch (UnsupportedEncodingException e) {
+	        }
+	        return null;
+	    }
+	
+	
+	    public String decrypt(String str) {
+	        if(str == null) {
+	            return null;
+	        }
+	        try {
+	            byte[] salt = null;
+	            // test if salt exists:
+	            int indexOfSaltIndicator = str.indexOf(SALT_PRESENT_INDICATOR);
+	            if(indexOfSaltIndicator>=0) {
+	                String saltString = str.substring(0, indexOfSaltIndicator);
+	                str = str.substring(indexOfSaltIndicator+1);
+	                salt = Tools.fromBase64(saltString);
+	            }
+	            // Decode base64 to get bytes
+	            byte[] dec = Tools.fromBase64(str);
+				init(salt);
+				               
+				// Decrypt
+	            byte[] utf8 = dcipher.doFinal(dec);
+	
+	            // Decode using utf-8
+	            return new String(utf8, "UTF8");
+	        } catch (javax.crypto.BadPaddingException e) {
+	        } catch (IllegalBlockSizeException e) {
+	        } catch (UnsupportedEncodingException e) {
+	        }
+	        return null;
+	    }
+	}
+
+	/**
      * @param byteBuffer
      * @return
      */
     public static String toBase64(byte[] byteBuffer) {
-        return (new sun.misc.BASE64Encoder()).encode(byteBuffer);
+        return new String(CommonsCodecBase64.encodeBase64(byteBuffer));
     }
 
     /**
@@ -571,12 +688,7 @@ public class Tools {
      * @throws IOException
      */
     public static byte[] fromBase64(String base64String)  {
-        try {
-            return new sun.misc.BASE64Decoder().decodeBuffer(base64String);
-        } catch (IOException e) {
-            e.printStackTrace();
-            throw new RuntimeException("Base64 unpacking not allowed");
-        }
+        return CommonsCodecBase64.decodeBase64(base64String.getBytes());
     }
 
     public static String compress(String message) {
